--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "url": "https://github.com/github/hubot.git"
   },
   "dependencies": {
+    "cleverbot-node": "^0.1.8",
+    "htmlparser": "^1.7.7",
     "hubot": ">= 2.6.0 < 3.0.0",
     "hubot-irc": "^0.2.2",
-    "hubot-scripts": ">= 2.5.0 < 3.0.0"
+    "hubot-scripts": ">= 2.5.0 < 3.0.0",
+    "soupselect": "^0.2.0",
+    "underscore": "^1.6.0",
+    "underscore.string": "^2.3.3"
   },
   "engines": {
     "node": ">= 0.8.x",
