--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cleverbot-node": "^0.1.8",
     "htmlparser": "^1.7.7",
     "hubot": ">= 2.6.0 < 3.0.0",
+    "hubot-heroku-keepalive": "0.0.4",
     "hubot-irc": "^0.2.2",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "soupselect": "^0.2.0",
