--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "hubot-heroku-keepalive": "0.0.4",
     "hubot-irc": "^0.2.2",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
+    "hubot-slack": "^2.2.0",
     "soupselect": "^0.2.0",
     "underscore": "^1.6.0",
     "underscore.string": "^2.3.3"
