--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hubot-irc": "^0.2.2",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "hubot-slack": "^2.2.0",
+    "hubot-youtube": "^1.0.1",
     "soupselect": "^0.2.0",
     "underscore": "^1.6.0",
     "underscore.string": "^2.3.3"
